--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
 
   # Routing
   go_router: ^14.8.1
+  file_picker: ^10.3.10
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
