[feat]: add Logo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,20 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  remove_alpha_ios: true
+  adaptive_icon_background: "#0B4C78"
+  adaptive_icon_foreground: "assets/logo.png"
+  web:
+    generate: true
+    image_path: "assets/logo.png"
+    background_color: "#0B4C78"
+    theme_color: "#0B4C78"
 
 flutter:
   uses-material-design: true
