[fix]: trigger pipeline only on flutter web app changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,15 @@ name: Build & Deploy Untense PWA
 on:
   push:
     branches: [main]
+    paths:
+      - 'lib/**'
+      - 'web/**'
+      - 'assets/**'
+      - 'localization/**'
+      - 'pubspec.yaml'
+      - 'pubspec.lock'
+      - 'Dockerfile'
+      - 'nginx/**'
   workflow_dispatch: # Allow manual trigger
 
 env:
