--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   file_picker: ^10.3.10
   share_plus: ^12.0.1
   flutter_native_splash: ^2.4.7
+  wolt_modal_sheet: ^0.11.0
 
 dev_dependencies:
   flutter_test:
