--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   share_plus: ^12.0.1
   flutter_native_splash: ^2.4.7
   wolt_modal_sheet: ^0.11.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
