--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: untense
 description: "Untense - Therapeutic tension tracking diary app."
 publish_to: 'none'
-version: 0.2.0
+version: 1.0.0
 
 environment:
   sdk: ^3.10.8
@@ -37,6 +37,7 @@ dependencies:
   # Utilities
   uuid: ^4.5.1
   intl: ^0.20.2
+  package_info_plus: ^9.0.0
   path_provider: ^2.1.5
 
   # Routing
